fixed font issue on back button in license; fixed kudo msg font issue when win is too small.

--- a/css/countingBeads.css
+++ b/css/countingBeads.css
@@ -933,7 +933,7 @@ body:hover #sbFinishPage, #orngFinishPage, #pearFinishPage, #limeFinishPage, #bb
     }
     .questNum 
     {
-	    font-size: 42pt; 
+	    font-size: 36pt; 
     }
     .kudoMsg {
 	    font-size: 18px;  
