--- a/css/license.css
+++ b/css/license.css
@@ -84,3 +84,17 @@
     width: 20%; /*200px;*/
     height: 8%;
 }
+
+/* for small-width screen: 640 x960 horizontal & vertical */
+@media only screen and (max-width: 960px) and (max-height: 960px) {
+.licensebtn {
+    font: 20px/100% Arial, Helvetica, sans-serif;
+}
+}
+/* for smaller-width screen: 800x480 horizontal or vertical */
+@media only screen and (max-width: 800px) and (max-height:800px) 
+{
+.licensebtn {
+    font: 18px/100% Arial, Helvetica, sans-serif;
+}
+}
